# dotenv_switch

./: .gitignore  README.md  pyproject.toml  setup.py
dotenv_switch/: __init__.py  exceptions.py
dotenv_switch/auto/: __init__.py
dotenv_switch/auto_lazy/: __init__.py
dotenv_switch/auto_required/: __init__.py
tests/: .env  .env.foo  .env.test  conftest.py  test_auto_app_env_foo.py  test_auto_default.py  test_auto_lazy.py  test_auto_no_app_env.py  test_auto_required.py  test_custom_defaults_none.py  test_custom_fallbacks.py  test_custom_var.py  test_default.py  test_defaults_app_env_foo.py  test_defaults_dotenv_only.py  test_defaults_no_app_env.py  test_env_alt_var.py  test_env_file.py  test_env_foo.py  test_env_lazy.py  test_env_notexist.py  test_env_notexist_not_required.py  test_env_notexist_required.py  test_required.py
