[tool.poetry]
name = "dotenv_switch"
version = "0.1.2"
description = "Switch between sourcing .env files based on $APP_ENV environment variable"
readme = "README.md"
authors = ["Michael Berkowski <mjb@umn.edu>", "David Naughton <naughton@umn.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.3"
python_dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-forked = "^1.4.0"
